FIX Penulisan Master Kategori Transaksi
