# app/Http/Requests/CreateMasterTransactionCategoryRequest.php
@@ -3,9 +3,9 @@
 namespace App\Http\Requests;
 
 use Illuminate\Foundation\Http\FormRequest;
-use App\Models\master_transaction_category;
+use App\Models\MasterTransactionCategory;
 
-class Createmaster_transaction_categoryRequest extends FormRequest
+class CreateMasterTransactionCategoryRequest extends FormRequest
 {
     /**
      * Determine if the user is authorized to make this request.
@@ -24,6 +24,6 @@ class Createmaster_transaction_categoryRequest extends FormRequest
      */
     public function rules()
     {
-        return master_transaction_category::$rules;
+        return MasterTransactionCategory::$rules;
     }
 }
